Added wait_timeout to get the required state of the VM.
Signed-off-by: Satyajit Bulage <sbulage@redhat.com>

--- a/tests/playbooks/kubevirt_dv_vm.yaml
+++ b/tests/playbooks/kubevirt_dv_vm.yaml
@@ -14,6 +14,8 @@
     - name: Create a Cirros VM from a DataVolume
       kubevirt_vm:
         state: running
+        wait: true
+        wait_timeout: 200
         name: cirros-dv
         labels:
           special: test-e2e-key
