--- a/tests/playbooks/kubevirt_pvc.yml
+++ b/tests/playbooks/kubevirt_pvc.yml
@@ -13,6 +13,8 @@
         namespace: default
         name: pvc1
         storage_class_name: "{{ storage_provisioner }}"
+        annotations:
+          "kubevirt.io/provisionOnNode" : "{{ node_name }}"
         access_modes:
         - ReadWriteOnce
         size: 100Mi
@@ -24,6 +26,8 @@
         namespace: default
         name: pvc-blank
         storage_class_name: "{{ storage_provisioner }}"
+        annotations:
+          "kubevirt.io/provisionOnNode" : "{{ node_name }}"
         access_modes:
         - ReadWriteOnce
         size: 100Mi
@@ -37,6 +41,8 @@
         namespace: default
         name: pvc-demo
         storage_class_name: "{{ storage_provisioner }}"
+        annotations:
+          "kubevirt.io/provisionOnNode" : "{{ node_name }}"
         access_modes:
         - ReadWriteOnce
         size: 100Mi
